# review-

./: .gitignore  Dockerfile  README.md  index.html  inference.py  models.py  openenv.yaml  package-lock.json  package.json  push_error.txt  pyproject.toml  requirements.txt  tailwind.config.ts  vercel.json  verify_env.py  vite.config.ts
.github/workflows/: deploy.yml
api/: index.py
backend/: main.py
backend/env/: code_review_env.py
backend/services/: groq_service.py  openai_service.py
backend/static/: index.html
backend/tasks/: graders.py  registry.py
scripts/: baseline_inference.py
server/: app.py  models.py  requirements.txt
server/agent/: dqn_agent.py
server/services/: llm_factory.py
server/static/: guide.html
server/training/: train.py
server/utils/: reward.py
src/: App.tsx  index.css
src/components/: CodeEditorPanel.tsx  ExplanationPanel.tsx  HeaderBar.tsx  ReviewPanel.tsx  RewardDashboard.tsx
src/lib/: ai-stream.ts  rl-agent.ts
src/pages/: Index.tsx
supabase/: config.toml
supabase/functions/code-review/: index.ts
